--- a/src/pages/zh/login/index.astro
+++ b/src/pages/zh/login/index.astro
@@ -1,4 +1,5 @@
 ---
+import Layout from "../../../layouts/Layout.astro";
 import { getLangFromUrl, useTranslations } from "../../../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
