--- a/src/pages/zh/profile.astro
+++ b/src/pages/zh/profile.astro
@@ -1,4 +1,5 @@
 ---
+import Layout from "../../layouts/Layout.astro";
 import { getLangFromUrl, useTranslations } from "../../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
@@ -15,23 +16,23 @@ import { users } from "../../../db/schema";
 import { getDb } from "../../lib/db";
 
 let userProfile;
-let _socialLinks: any = {};
-let _errorMsg = null;
+let socialLinks: any = {};
+let errorMsg = null;
 
 try {
-	const db = getDb(env);
-	userProfile = await db
-		.select()
-		.from(users)
-		.where(eq(users.id, user.id))
-		.get();
+  const db = getDb(env);
+  userProfile = await db
+    .select()
+    .from(users)
+    .where(eq(users.id, user.id))
+    .get();
 
-	_socialLinks = userProfile?.socialLinks
-		? JSON.parse(userProfile.socialLinks as string)
-		: {};
+  socialLinks = userProfile?.socialLinks
+    ? JSON.parse(userProfile.socialLinks as string)
+    : {};
 } catch (e: any) {
-	console.error("Profile Error:", e);
-	_errorMsg = e.message;
+  console.error("Profile Error:", e);
+  errorMsg = e.message;
 }
 ---
 
