--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,8 @@
 ---
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
+import LanguagePicker from "./LanguagePicker.astro";
 
-// biome-ignore lint/correctness/noUnusedVariables: Used in template
 const lang = getLangFromUrl(Astro.url);
-// biome-ignore lint/correctness/noUnusedVariables: Used in template
 const t = useTranslations(lang);
 ---
 
