--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,7 @@ import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import MobileNav from "../components/MobileNav.astro";
 import SearchModal from "../components/SearchModal.tsx";
+import { ClientRouter } from "astro:transitions/client";
 
 const lang = getLangFromUrl(Astro.url);
 
