--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import Layout from "../layouts/Layout.astro";
+import SocialLinks from "../components/SocialLinks.tsx";
 const gravatarHash = "60eb98ab51a815a519feeca028e08573"; // IchimaruGin728
 
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
