fix: correct ClientRouter import and remove debug logs

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import MobileNav from "../components/MobileNav.astro";
 import SearchModal from "../components/SearchModal.tsx";
-import { ClientRouter } from "astro:transitions/client";
+import { ClientRouter } from "astro:transitions";
 
 const lang = getLangFromUrl(Astro.url);
 
