chore: completely remove Prettier - use Biome only

--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -1,5 +1,5 @@
 ---
-import { getLangFromUrl, languages, getRouteFromUrl } from "../i18n/utils";
+import { getLangFromUrl, getRouteFromUrl, languages } from "../i18n/utils";
 
 const url = Astro.url;
 const currentLang = getLangFromUrl(url);
