--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -1,4 +1,5 @@
 ---
+import Layout from "../layouts/Layout.astro";
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
@@ -24,7 +25,7 @@ const userProfile = await db
   .where(eq(users.id, user.id))
   .get();
 
-const _socialLinks = userProfile?.socialLinks
+const socialLinks = userProfile?.socialLinks
   ? JSON.parse(userProfile.socialLinks as string)
   : {};
 ---
